website/nginx.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: nginx
  serviceName: "nginx"
  replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        app: nginx
      annotations:
        checksum/config: "67b9205b25ed"
        checksum/phpconfig: "3cad52e955d0"
    spec:
      terminationGracePeriodSeconds: 10
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
        - name: nginx
          image: 127.0.0.1:30500/nginx:1.31.3-trixie-patched
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
            name: web
          volumeMounts:
          - name: web-data
            mountPath: /usr/share/nginx/html
          - name: nginx-config-volume
            mountPath: /etc/nginx/conf.d/default.conf
            subPath: default.conf
          - name: ddns-config-volume
            mountPath: /etc/nginx/conf.d/ddns.conf
            subPath: ddns.conf
        - name: php
          image: php:7.0-fpm
          ports:
          - containerPort: 9000
          volumeMounts:
          - name: web-data
            mountPath: /var/www/html
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
        - name: ddns-config-volume
          configMap:
            name: ddns-config
  volumeClaimTemplates:
  - metadata:
      name: web-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "nfs-client"
      resources:
        requests:
          storage: 1Gi
